--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ body {
 form {  
  display: block;
 background-color: rgba(40, 42, 43, 0.8);
- width: 50%;
+ width: 30%;
  margin: 0 auto;
  padding: 50px;
  border-radius: 20px;
+ font-size: 20px;
 }
 
  .field {
@@ -50,4 +51,5 @@ transform: scale(1.2);
     width: 100%;
     height: 40px;
     background-color:blanchedalmond;
+    font-size: 20px;
   }
